# agent-scaffold

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: second-opinion.md
.claude/commands/: thk-research.md
.claude/hooks/: auto-format.sh  session-brief.sh
.claude/skills/research-brief/: SKILL.md
.github/workflows/: ci.yaml
docs/ko/: CHANGELOG.md  CONTRIBUTING.md  README.md
docs/ko/agents/: second-opinion.md
docs/ko/commands/: bootstrap.md  thk-bootstrap.md  thk-research.md  thk-ship.md  thk-spec.md
docs/ko/skills/release-versioning/: SKILL.md
docs/ko/skills/reproducible-debugging/: SKILL.md
docs/ko/skills/research-brief/: SKILL.md
docs/ko/skills/spec-driven-development/: SKILL.md
specs/bootstrap-command/: README.md  findings.md  plan.md  progress.md  spec.md  tasks.md
specs/thk-commands/: README.md  findings.md  plan.md  progress.md  spec.md  tasks.md
src/agent_scaffold/: _template.py  cli.py
src/agent_scaffold/source-structure/.claude/agents/: README.md
src/agent_scaffold/source-structure/.claude/skills/: README.md
src/agent_scaffold/source-structure/common/: CLAUDE.md
src/agent_scaffold/source-structure/common/.claude/commands/: README.md  bootstrap.md  thk-bootstrap.md  thk-ship.md  thk-spec.md
src/agent_scaffold/source-structure/common/.claude/hooks/: README.md
src/agent_scaffold/source-structure/common/.claude/rules/: README.md
tests/: test_cli.py  test_packaging.py
(+3 files in other folders)
